Creación pantalla de Login
Se crea vista Login parcialmente

--- a/3 - Proyecto/Despacho/WebApp/Views/Login/Login.cshtml
+++ b/3 - Proyecto/Despacho/WebApp/Views/Login/Login.cshtml
@@ -2,4 +2,19 @@
     ViewBag.Title = "Login";
 }
 
-<h2>INGRESO</h2>
+<div class="fondo-login">
+    <div class="imagen-camion"></div>
+    <div class="form-login">
+        <div class="form-login-body">
+            <img src="~/Content/img/logo.svg"/>
+            <div class="div-usuario">
+                <i class="fa fa-user"></i>
+                <div>
+                    <label>Usuario</label>
+                    <input id="usuario" name="usuario" type="text" placeholder="Usuario" />
+                </div>
+            </div>
+            <input id="clave" name="clave" type="password" placeholder="Clave" />
+        </div>
+    </div>
+</div>
