--- a/3 - Proyecto/Despacho/WebApp/Views/Shared/_LoginLayout.cshtml
+++ b/3 - Proyecto/Despacho/WebApp/Views/Shared/_LoginLayout.cshtml
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prueba</title>
+    <title>@ViewBag.Title</title>
     @Styles.Render("~/Content/css/fontawesome")
     @Styles.Render("~/Content/css")
     @Styles.Render("~/Content/css/login")
@@ -13,7 +13,12 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @Scripts.Render("~/bundles/modernizr")
+    @Scripts.Render("~/bundles/general")
     @RenderSection("scripts", required: false)
+
+    <script>
+        var logueado = '@Session["logueado"]';
+    </script>
 
     @RenderBody()
 </body>
