--- a/3 - Proyecto/Despacho/WebApp/Views/Login/Login.cshtml
+++ b/3 - Proyecto/Despacho/WebApp/Views/Login/Login.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
-    Layout = "/Views/Shared/_LoginLayout.cshtml";
     ViewBag.Title = "Login";
+    Layout = "/Views/Shared/_LoginLayout.cshtml";
 }
 
 <div class="fondo-login">
@@ -37,68 +37,4 @@
     </div>
 </div>
 
-<script>
-    $(() => {
-        if ("@Session["logueado"]" == "True") location.href = '/Home/Index';
-
-        let usuario = localStorage.getItem('usuario');
-        if (usuario) usuario = JSON.parse(atob(usuario));
-
-        $('#continuar').click(() => {
-            let user = $('#usuario').val();
-
-            $.post('/Login/ObtenerUsuario', { usuario: user }, function (data) {
-                if (data.Username == user) {
-                    localStorage.setItem('usuario', btoa(JSON.stringify(data)));
-
-                    let nombre = data.Nombres + ' ' + data.ApellidoPaterno;
-                    if (data.ApellidoMaterno) nombre += ' ' + data.ApellidoMaterno;
-
-                    $('.usuario-ok').html(nombre);
-
-                    $('.div-clave').css('display', 'flex');
-                    $('.div-ingresar').css('display', 'flex');
-                    $('.div-usuario-ok').css('display', 'flex');
-                    $('.div-continuar').hide();
-                    $('.div-usuario').hide();
-                } else {
-                    alert('Usuario no encontrado');
-                }
-            });
-        });
-
-        $('#volver').click(() => {
-            localStorage.removeItem('usuario');
-
-            $('.div-clave').hide();
-            $('.div-ingresar').hide();
-            $('.div-usuario-ok').hide()
-            $('.div-continuar').css('display', 'flex');
-            $('.div-usuario').css('display', 'flex');
-        });
-
-        $('#ingresar').click(() => {
-            usuario = localStorage.getItem('usuario');
-            if (usuario) usuario = JSON.parse(atob(usuario));
-
-            $.post('/Login/Ingresar', { usuario: usuario.Username, clave: $('#clave').val() }, function (data) {
-                if (data.exito == true) {
-                    localStorage.setItem('usuario', btoa(JSON.stringify(data.usuario)));
-
-                    location.href = '/Home/Index';
-                } else {
-                    alert('Clave incorrecta.');
-                }
-            });
-        });
-
-        if (usuario) {
-            $('#usuario').val(usuario.Username);
-            let nombre = usuario.Nombres + ' ' + usuario.ApellidoPaterno;
-            if (usuario.ApellidoMaterno) nombre += ' ' + usuario.ApellidoMaterno;
-
-            $('.usuario-ok').html(nombre);
-            $('#continuar').click();
-        }
-    });
-</script>
+@Scripts.Render("~/bundles/login")
