--- a/3 - Proyecto/Despacho/WebApp/Views/Shared/_Layout.cshtml
+++ b/3 - Proyecto/Despacho/WebApp/Views/Shared/_Layout.cshtml
@@ -31,6 +31,10 @@
     </script>
 </head>
 <body class="m-page--fluid m--skin- m-content--skin-light2 m-header--fixed m-header--fixed-mobile m-aside-left--enabled m-aside-left--skin-dark m-aside-left--offcanvas m-footer--push m-aside--offcanvas-default">
+
+    @Scripts.Render("~/bundles/metronic")
+    @RenderSection("scripts", required: false)
+
     <!-- begin:: Page -->
     <div class="m-grid m-grid--hor m-grid--root m-page">
         <!-- BEGIN: Header -->
@@ -122,7 +126,7 @@
                                         <i class="m-menu__ver-arrow la la-angle-right"></i>
                                     </a>
 
-                                    <div class="m-menu__submenu  m-menu__submenu--fixed m-menu__submenu--left" style="width:1000px">
+                                    <div class="m-menu__submenu  m-menu__submenu--fixed m-menu__submenu--left" style="width:200px">
                                         <ul class="m-menu__subnav">
                                             <li class="m-menu__item" aria-haspopup="true">
                                                 <a href="#" class="m-menu__link ">
@@ -342,7 +346,7 @@
                                         </span>
                                     </li>
                                     <li class="m-menu__item " aria-haspopup="true" m-menu-link-redirect="1">
-                                        <a href="/Cliente/Cliente" class="m-menu__link ">
+                                        <a href="/Cliente/Index" class="m-menu__link ">
                                             <i class="m-menu__link-bullet flaticon-users" style="color: #868aa8"><span></span></i>
                                             <span class="m-menu__link-text">Clientes</span>
                                         </a>
@@ -993,9 +997,5 @@
         <i class="la la-arrow-up"></i>
     </div>
     <!-- end::Scroll Top -->
-
-    @Scripts.Render("~/bundles/metronic")
-    @RenderSection("scripts", required: false)
-
 </body>
 </html>
