--- a/3 - Proyecto/Despacho/WebApp/Views/Shared/_Layout.cshtml
+++ b/3 - Proyecto/Despacho/WebApp/Views/Shared/_Layout.cshtml
@@ -420,7 +420,7 @@
                                         </a>
                                     </li>
                                     <li class="m-menu__item " aria-haspopup="true" m-menu-link-redirect="1">
-                                        <a href="inner.html" class="m-menu__link ">
+                                        <a href="/Camion/Index" class="m-menu__link ">
                                             <i class="m-menu__link-bullet flaticon-truck" style="color: #868aa8;"><span></span></i>
                                             <span class="m-menu__link-text">Camiones</span>
                                         </a>
