--- a/3 - Proyecto/Despacho/WebApp/Views/Shared/_Layout.cshtml
+++ b/3 - Proyecto/Despacho/WebApp/Views/Shared/_Layout.cshtml
@@ -97,13 +97,13 @@
                           </a>
                         </li>
                         <li class="m-menu__item " aria-haspopup="true">
-                          <a href="actions.html" class="m-menu__link ">
+                          <a href="/CargaMasiva/Index" class="m-menu__link ">
                             <i class="m-menu__link-icon flaticon-cogwheel-2"></i>
                             <span class="m-menu__link-text">Cargar Masivamente</span>
                           </a>
                         </li>
                         <li class="m-menu__item " aria-haspopup="true">
-                          <a href="actions.html" class="m-menu__link ">
+                          <a href="/Existencia/Index" class="m-menu__link ">
                             <i class="m-menu__link-icon flaticon-search-1"></i>
                             <span class="m-menu__link-text">Consultar Existencias</span>
                           </a>
@@ -289,7 +289,7 @@
                   <i class="m-menu__section-icon flaticon-more-v2"></i>
                 </li>
                 <li class="m-menu__item " aria-haspopup="true" m-menu-link-redirect="1">
-                  <a href="inner.html" class="m-menu__link ">
+                  <a href="/Solicitud/Index" class="m-menu__link ">
                     <span class="m-menu__item-here"></span>
                     <i class="m-menu__link-icon flaticon-business" style="color: #868aa8"></i>
                     <span class="m-menu__link-title">
@@ -303,7 +303,7 @@
                   </a>
                 </li>
                 <li class="m-menu__item " aria-haspopup="true" m-menu-link-redirect="1">
-                  <a href="inner.html" class="m-menu__link ">
+                  <a href="/CargaMasiva/Index" class="m-menu__link ">
                     <span class="m-menu__item-here"></span>
                     <i class="m-menu__link-icon flaticon-file" style="color: #868aa8"></i>
                     <span class="m-menu__link-text">Carga Masiva</span>
@@ -314,7 +314,7 @@
                   <i class="m-menu__section-icon flaticon-more-v2"></i>
                 </li>
                 <li class="m-menu__item " aria-haspopup="true" m-menu-link-redirect="1">
-                  <a href="inner.html" class="m-menu__link ">
+                  <a href="/Existencia/Index" class="m-menu__link ">
                     <span class="m-menu__item-here"></span>
                     <i class="m-menu__link-icon flaticon-search-1" style="color: #868aa8"></i>
                     <span class="m-menu__link-text">Consulta Existencias</span>
