--- a/3 - Proyecto/Despacho/WebApp/Views/Solicitud/Index.cshtml
+++ b/3 - Proyecto/Despacho/WebApp/Views/Solicitud/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
-    ViewBag.Title = "Despacho - Clientes";
+    ViewBag.Title = "Despacho - Solicitud";
     ViewBag.SeccionTieneTitulo = true;
-    ViewBag.TituloSeccion = "Clientes";
+    ViewBag.TituloSeccion = "Solicitudes de Despacho";
 }
 
 <div class="m-portlet m-portlet--mobile">
