--- a/3 - Proyecto/Despacho/WebApp/Views/Home/Index.cshtml
+++ b/3 - Proyecto/Despacho/WebApp/Views/Home/Index.cshtml
@@ -1,7 +1,11 @@
 ﻿@{
-    ViewBag.Title = "Inicio";
+	ViewBag.Title = "Inicio";
 
-    ViewBag.SeccionTieneTitulo = true;
-    ViewBag.MuestraFecha = true;
-    ViewBag.TituloSeccion = "Inicio";
+	ViewBag.SeccionTieneTitulo = true;
+	ViewBag.MuestraFecha = true;
+	ViewBag.TituloSeccion = "Inicio";
+}
+
+@section Less{
+	<link rel="stylesheet/less" type="text/css" href="~/Content/less/home.less" />
 }
