--- a/3 - Proyecto/Despacho/WebApp/Views/Home/Index.cshtml
+++ b/3 - Proyecto/Despacho/WebApp/Views/Home/Index.cshtml
@@ -4,6 +4,7 @@
 	ViewBag.SeccionTieneTitulo = true;
 	ViewBag.MuestraFecha = true;
 	ViewBag.TituloSeccion = "Inicio";
+	ViewBag.Pagina = 0;
 }
 
 @section Less{
