--- a/3 - Proyecto/Despacho/WebApp/Views/Cliente/Index.cshtml
+++ b/3 - Proyecto/Despacho/WebApp/Views/Cliente/Index.cshtml
@@ -51,7 +51,7 @@
 		</div>
 		<!--end: Search Form -->
 		<!--begin: Datatable -->
-		<div class="m_datatable" id="local_data"></div>
+		<div class="m_datatable" id="listaClientes"></div>
 		<!--end: Datatable -->
 	</div>
 </div>
