--- a/3 - Proyecto/Despacho/WebApp/Views/Camion/index.cshtml
+++ b/3 - Proyecto/Despacho/WebApp/Views/Camion/index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-	ViewBag.Title = "Camiones";
+	ViewBag.Title = "Despacho-Camiones";
 	ViewBag.SeccionTieneTitulo = true;
 	ViewBag.TituloSeccion = "Camiones";
 }
