--- a/3 - Proyecto/Despacho/WebApp/Views/Shared/_Layout.cshtml
+++ b/3 - Proyecto/Despacho/WebApp/Views/Shared/_Layout.cshtml
@@ -351,13 +351,13 @@
 										</a>
 									</li>
 									<li class="m-menu__item " aria-haspopup="true" m-menu-link-redirect="1">
-										<a href="/Cliente/UnidadNegocio" class="m-menu__link ">
+										<a href="/UnidadNegocio/Index" class="m-menu__link ">
 											<i class="m-menu__link-bullet flaticon-suitcase" style="color: #868aa8"><span></span></i>
 											<span class="m-menu__link-text">Unidades Negocio</span>
 										</a>
 									</li>
 									<li class="m-menu__item " aria-haspopup="true" m-menu-link-redirect="1">
-										<a href="/Cliente/Gerencia" class="m-menu__link ">
+										<a href="/Gerencia/Index" class="m-menu__link ">
 											<i class="m-menu__link-bullet flaticon-user-settings" style="color: #868aa8"><span></span></i>
 											<span class="m-menu__link-text">Gerencias</span>
 										</a>
@@ -382,7 +382,7 @@
 										</span>
 									</li>
 									<li class="m-menu__item " aria-haspopup="true" m-menu-link-redirect="1">
-										<a href="inner.html" class="m-menu__link ">
+										<a href="/Usuario/Index" class="m-menu__link ">
 											<i class="m-menu__link-bullet flaticon-user-add" style="color: #868aa8"><span></span></i>
 											<span class="m-menu__link-text">Usuarios</span>
 										</a>
