--- a/3 - Proyecto/Despacho/WebApp/Views/Shared/_Layout.cshtml
+++ b/3 - Proyecto/Despacho/WebApp/Views/Shared/_Layout.cshtml
@@ -388,7 +388,7 @@
 										</a>
 									</li>
 									<li class="m-menu__item " aria-haspopup="true" m-menu-link-redirect="1">
-										<a href="inner.html" class="m-menu__link ">
+										<a href="/Perfil/Index" class="m-menu__link ">
 											<i class="m-menu__link-bullet flaticon-user-ok" style="color: #868aa8"><span></span></i>
 											<span class="m-menu__link-text">Roles</span>
 										</a>
