Logradas las Vistas

--- a/3 - Proyecto/Despacho/WebApp/Views/Camion/index.cshtml
+++ b/3 - Proyecto/Despacho/WebApp/Views/Camion/index.cshtml
@@ -3,7 +3,9 @@
 	ViewBag.SeccionTieneTitulo = true;
 	ViewBag.TituloSeccion = "Camiones";
 }
-
+@section Less{
+	<link rel="stylesheet/less" type="text/css" href="~/Content/less/camion.less" />
+}
 @section Scripts{
 	<script type="text/javascript" src="~/Content/js/Camion.js"></script>
 }
