--- a/3 - Proyecto/Despacho/WebApp/Views/Shared/_Layout.cshtml
+++ b/3 - Proyecto/Despacho/WebApp/Views/Shared/_Layout.cshtml
@@ -413,7 +413,7 @@
 										</span>
 									</li>
 									<li class="m-menu__item " aria-haspopup="true" m-menu-link-redirect="1">
-										<a href="inner.html" class="m-menu__link ">
+										<a href="/TipoSolicitud/Index" class="m-menu__link ">
 											<i class="m-menu__link-bullet flaticon-folder-2" style="color: #868aa8;"><span></span></i>
 											<span class="m-menu__link-text">Tipos Solicitud</span>
 										</a>
@@ -425,7 +425,7 @@
 										</a>
 									</li>
 									<li class="m-menu__item " aria-haspopup="true" m-menu-link-redirect="1">
-										<a href="inner.html" class="m-menu__link ">
+										<a href="/EstadoEquipo/Index" class="m-menu__link ">
 											<i class="m-menu__link-bullet flaticon-technology" style="color: #868aa8;"><span></span></i>
 											<span class="m-menu__link-text">Estados Equipos</span>
 										</a>
@@ -449,7 +449,7 @@
 										</a>
 									</li>
 									<li class="m-menu__item " aria-haspopup="true" m-menu-link-redirect="1">
-										<a href="inner.html" class="m-menu__link ">
+										<a href="/TipoDocumento/Index" class="m-menu__link ">
 											<i class="m-menu__link-bullet flaticon-folder-2"><span></span></i>
 											<span class="m-menu__link-text">Tipos Documentos</span>
 										</a>
