--- a/3 - Proyecto/Despacho/WebApp/Views/TipoDocumento/Index.cshtml
+++ b/3 - Proyecto/Despacho/WebApp/Views/TipoDocumento/Index.cshtml
@@ -3,7 +3,9 @@
   ViewBag.SeccionTieneTitulo = true;
   ViewBag.TituloSeccion = "Tipo Documentos";
 }
-
+@section Less{
+  <link rel="stylesheet/less" type="text/css" href="~/Content/less/tipodocumento.less" />
+}
 @section Scripts{
   <script type="text/javascript" src="~/Content/js/TipoDocumento.js"></script>
 }
@@ -26,7 +28,7 @@
           <div class="form-group m-form__group row align-items-center">
             <div class="col-md-4">
               <div class="m-input-icon m-input-icon--left">
-                <input type="text" class="form-control m-input m-input--solid" placeholder="Buscar..." id="buscarTipoDocumento">
+                <input type="text" class="form-control m-input m-input--solid" placeholder="Buscar..." id="buscartipodocumento">
                 <span class="m-input-icon__icon m-input-icon__icon--left">
                   <span><i class="la la-search"></i></span>
                 </span>
@@ -47,7 +49,7 @@
     </div>
     <!--end: Search Form -->
     <!--begin: Datatable -->
-    <div class="m_datatable" id="listaTipoDocumento"></div>
+    <div class="m_datatable" id="listatiposdocumentos"></div>
     <!--end: Datatable -->
   </div>
 </div>
