--- a/3 - Proyecto/Despacho/WebApp/Views/Perfil/Index.cshtml
+++ b/3 - Proyecto/Despacho/WebApp/Views/Perfil/Index.cshtml
@@ -1,7 +1,11 @@
 ﻿@{
-	ViewBag.Title = "Despacho-Roles";
+	ViewBag.Title = "Despacho - Roles";
 	ViewBag.SeccionTieneTitulo = true;
 	ViewBag.TituloSeccion = "Roles";
+}
+
+@section Less{
+	<link rel="stylesheet/less" type="text/css" href="~/Content/less/perfil.less" />
 }
 
 @section Scripts{
@@ -26,7 +30,7 @@
 					<div class="form-group m-form__group row align-items-center">
 						<div class="col-md-4">
 							<div class="m-input-icon m-input-icon--left">
-								<input type="text" class="form-control m-input m-input--solid" placeholder="Buscar..." id="buscarPerfil">
+								<input type="text" class="form-control m-input m-input--solid" placeholder="Buscar..." id="buscarperfil">
 								<span class="m-input-icon__icon m-input-icon__icon--left">
 									<span><i class="la la-search"></i></span>
 								</span>
