--- a/3 - Proyecto/Despacho/WebApp/Views/Shared/_Layout.cshtml
+++ b/3 - Proyecto/Despacho/WebApp/Views/Shared/_Layout.cshtml
@@ -437,7 +437,7 @@
 										</a>
 									</li>
 									<li class="m-menu__item " aria-haspopup="true" m-menu-link-redirect="1">
-										<a href="inner.html" class="m-menu__link ">
+										<a href="/Prioridad/Index" class="m-menu__link ">
 											<i class="m-menu__link-bullet m-menu__link-bullet--dot"><span></span></i>
 											<span class="m-menu__link-text">Prioridades</span>
 										</a>
