--- a/3 - Proyecto/Despacho/WebApp/Content/less/login.less
+++ b/3 - Proyecto/Despacho/WebApp/Content/less/login.less
@@ -11,7 +11,7 @@
 .imagen-camion {
 	background-image: url('/Content/img/Camión con Cajas.svg');
 	width: 60%;
-	height: 600px;
+	height: 100%;
 	background-repeat: no-repeat;
 	background-size: cover;
 	display: flex;
