--- a/3 - Proyecto/Despacho/WebApp/Views/Shared/_Layout.cshtml
+++ b/3 - Proyecto/Despacho/WebApp/Views/Shared/_Layout.cshtml
@@ -37,6 +37,7 @@
 	</script>
 
 	@Scripts.Render("~/bundles/metronic")
+	@Scripts.Render("~/bundles/general")
 	@RenderSection("Scripts", required: false)
 
 </head>
