--- a/3 - Proyecto/Despacho/WebApp/Views/Existencia/Index.cshtml
+++ b/3 - Proyecto/Despacho/WebApp/Views/Existencia/Index.cshtml
@@ -9,6 +9,8 @@
 }
 
 @section Scripts {
+	<script src="//cdnjs.cloudflare.com/ajax/libs/phaser/2.1.1/phaser.min.js"></script>
+	<script type="text/javascript" src="~/Content/librerias/phaser-plugin-isometric/dist/phaser-plugin-isometric.js"></script>
 	<script type="text/javascript" src="~/Content/js/Existencia.js"></script>
 }
 
@@ -22,7 +24,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="m-portlet__body">
+	<div class="m-portlet__body" id="test">
 		<!--begin: Search Form -->
 		<div class="m-form m-form--label-align-right m--margin-top-20 m--margin-bottom-30">
 			<div class="row align-items-center">
@@ -50,9 +52,6 @@
 			</div>
 		</div>
 		<!--end: Search Form -->
-		<!--begin: Datatable -->
-		<div class="m_datatable" id="local_data"></div>
-		<!--end: Datatable -->
 	</div>
 </div>
 
