--- a/3 - Proyecto/Despacho/WebApp/Views/Camion/index.cshtml
+++ b/3 - Proyecto/Despacho/WebApp/Views/Camion/index.cshtml
@@ -28,7 +28,7 @@
 					<div class="form-group m-form__group row align-items-center">
 						<div class="col-md-4">
 							<div class="m-input-icon m-input-icon--left">
-								<input type="text" class="form-control m-input m-input--solid" placeholder="Buscar..." id="buscarCamion">
+								<input type="text" class="form-control m-input m-input--solid" placeholder="Buscar..." id="buscarcamion">
 								<span class="m-input-icon__icon m-input-icon__icon--left">
 									<span><i class="la la-search"></i></span>
 								</span>
@@ -49,7 +49,7 @@
 		</div>
 		<!--end: Search Form -->
 		<!--begin: Datatable -->
-		<div class="m_datatable" id="listaCamiones"></div>
+		<div class="m_datatable" id="listacamiones"></div>
 		<!--end: Datatable -->
 	</div>
 </div>
