--- a/3 - Proyecto/Despacho/WebApp/Views/UnidadNegocio/Index.cshtml
+++ b/3 - Proyecto/Despacho/WebApp/Views/UnidadNegocio/Index.cshtml
@@ -30,7 +30,7 @@
 					<div class="form-group m-form__group row align-items-center">
 						<div class="col-md-4">
 							<div class="m-input-icon m-input-icon--left">
-								<input type="text" class="form-control m-input m-input--solid" placeholder="Buscar..." id="buscarUnidadNegocio">
+								<input type="text" class="form-control m-input m-input--solid" placeholder="Buscar..." id="buscarunidadnegocio">
 								<span class="m-input-icon__icon m-input-icon__icon--left">
 									<span><i class="la la-search"></i></span>
 								</span>
