"Realizadas" las Vistas, debo verlas funcionando

--- a/3 - Proyecto/Despacho/WebApp/Views/Usuario/Usuario.cshtml
+++ b/3 - Proyecto/Despacho/WebApp/Views/Usuario/Usuario.cshtml
@@ -1,1 +1,58 @@
-﻿
+﻿@model Datos.Modelo.Usuario
+@{
+	ViewBag.SeccionTieneTitulo = true;
+
+	if (Model.UsuarioId == 0)
+	{
+		ViewBag.Title = "Despacho - Nuevo Usuario";
+		ViewBag.TituloSeccion = "Nuevo Usuario";
+	}
+	else
+	{
+		ViewBag.Title = "Despacho - " + Model.Username;
+		ViewBag.TituloSeccion = Model.Username;
+	}
+}
+
+@section Less{
+	<link rel="stylesheet/less" type="text/css" href="~/Content/less/usuarios.less" />
+}
+
+@section Scripts{
+	@Scripts.Render("~/bundles/usuario")
+}
+
+<div class="m-portlet m-portlet--tab">
+	<!--begin::Form-->
+	<form class="m-form m-form--fit m-form--label-align-right">
+		<div class="m-portlet__body">
+			<input type="hidden" value="@Model.UsuarioId" id="id">
+			<input type="hidden" value="@Model.EstaActivo" id="activo">
+
+			<div class="form-group m-form__group row">
+				<label for="example-text-input" class="col-2 col-form-label">Descripción</label>
+				<div class="col-10">
+					<input class="form-control m-input" type="text" value="@Model.Username" id="Nombre Usuario" style="width: 50%">
+				</div>
+			</div>
+
+		</div>
+		<div class="m-portlet__foot m-portlet__foot--fit">
+			<div class="m-form__actions">
+				<div class="row">
+					<div class="col-2">
+					</div>
+					<div class="col-10">
+						<button type="button" class="btn btn-success" id="btnGuardar">Guardar</button>
+						<a href="/Cliente/Index" class="btn btn-secondary">Volver</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</form>
+</div>
+
+
+
+
+
