--- a/3 - Proyecto/Despacho/WebApp/Views/Gerencia/Index.cshtml
+++ b/3 - Proyecto/Despacho/WebApp/Views/Gerencia/Index.cshtml
@@ -9,7 +9,7 @@
 }
 
 @section Scripts{
-  <script type="text/javascript" src="~/Content/js/Gerencia.js"></script>
+  @Scripts.Render("~/bundles/gerencia")
 }
 
 <div class="m-portlet m-portlet--mobile">
