--- a/3 - Proyecto/Despacho/WebApp/Views/UnidadNegocio/UnidadNegocio.cshtml
+++ b/3 - Proyecto/Despacho/WebApp/Views/UnidadNegocio/UnidadNegocio.cshtml
@@ -34,6 +34,10 @@
 				<div class="col-10">
 					<input class="form-control m-input" type="text" value="@Model.Descripcion" id="descripcion" style="width: 50%">
 				</div>
+				<label for="example-text-input" class="col-2 col-form-label">Cliente</label>
+				<div class="col-10">
+					<input class="form-control m-input" type="text" value="@Model.ClienteId" id="clienteid" style="width: 50%">
+				</div>
 			</div>
 
 		</div>
