Modificaciones de las vistas

--- a/3 - Proyecto/Despacho/WebApp/Views/Camion/index.cshtml
+++ b/3 - Proyecto/Despacho/WebApp/Views/Camion/index.cshtml
@@ -7,7 +7,7 @@
 	<link rel="stylesheet/less" type="text/css" href="~/Content/less/camion.less" />
 }
 @section Scripts{
-	<script type="text/javascript" src="~/Content/js/Camion.js"></script>
+	@Scripts.Render("~/bundles/camion")
 }
 
 <div class="m-portlet m-portlet--mobile">
