--- a/3 - Proyecto/Despacho/WebApp/Views/TipoSolicitud/Index.cshtml
+++ b/3 - Proyecto/Despacho/WebApp/Views/TipoSolicitud/Index.cshtml
@@ -9,7 +9,7 @@
 }
 
 @section Scripts{
-  <script type="text/javascript" src="~/Content/js/TipoSolicitud.js"></script>
+  @Scripts.Render("~/bundles/tiposolicitud")
 }
 <div class="m-portlet m-portlet--mobile">
   <div class="m-portlet__head">
