--- a/3 - Proyecto/Despacho/WebApp/Views/EmpresaTransporte/Index.cshtml
+++ b/3 - Proyecto/Despacho/WebApp/Views/EmpresaTransporte/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 @section Scripts{
-  <script type="text/javascript" src="~/Content/js/EmpresaTransporte.js"></script>
+  @Scripts.Render("~/bundles/empresatransporte")
 }
 
 <div class="m-portlet m-portlet--mobile">
