--- a/3 - Proyecto/Despacho/WebApp/Views/TipoDocumento/Index.cshtml
+++ b/3 - Proyecto/Despacho/WebApp/Views/TipoDocumento/Index.cshtml
@@ -7,7 +7,7 @@
   <link rel="stylesheet/less" type="text/css" href="~/Content/less/tipodocumento.less" />
 }
 @section Scripts{
-  <script type="text/javascript" src="~/Content/js/TipoDocumento.js"></script>
+  @Scripts.Render("~/bundles/tipodocumento")
 }
 
 <div class="m-portlet m-portlet--mobile">
