--- a/3 - Proyecto/Despacho/WebApp/Views/UnidadNegocio/Index.cshtml
+++ b/3 - Proyecto/Despacho/WebApp/Views/UnidadNegocio/Index.cshtml
@@ -9,7 +9,7 @@
 }
 
 @section Scripts{
-	<script type="text/javascript" src="~/Content/js/UnidadNegocio.js"></script>
+	@Scripts.Render("~/bundles/unidadnegocio")
 }
 
 <div class="m-portlet m-portlet--mobile">
