Camión debe hacer un combo selector en la edición, creación

--- a/3 - Proyecto/Despacho/WebApp/Views/Camion/Camion.cshtml
+++ b/3 - Proyecto/Despacho/WebApp/Views/Camion/Camion.cshtml
@@ -1,19 +1,18 @@
 ﻿@model Datos.Modelo.Camion
 @{
-	ViewBag.SeccionTieneTitulo = true;
+		ViewBag.SeccionTieneTitulo = true;
 
-	if (Model.patente == "")
-	{
-		ViewBag.Title = "Despacho - " + Model.descripcion;
-		ViewBag.TituloSeccion = Model.descripcion;
+		if (Model.patente == "")
+		{
+			ViewBag.Title = "Despacho - " + Model.descripcion;
+			ViewBag.TituloSeccion = Model.descripcion;
+		}
+		else
+		{
+			ViewBag.Title = "Despacho - Nuevo Camión";
+			ViewBag.TituloSeccion = "Nuevo Camión";
+		}	
 	}
-	else
-	{
-		ViewBag.Title = "Despacho - Nuevo Camión";
-		ViewBag.TituloSeccion = "Nuevo Camión";
-	}
-
-}
 
 @section Less{
 	<link rel="stylesheet/less" type="text/css" href="~/Content/less/camion.less" />
@@ -28,13 +27,22 @@
 	<form class="m-form m-form--fit m-form--label-align-right">
 		<div class="m-portlet__body">
 			<input type="hidden" value="@Model.patente" id="id">
-			<input type="hidden" value="@Model.EstaActivo" id="activo">
+			<input type="hidden" value="@Model.estaactivo" id="activo">
 
 			<div class="form-group m-form__group row">
+				<label for="example-text-input" class="col-2 col-form-label">Patente</label>
+				<div class="col-10">
+					<input class="form-control m-input" type="text" value="@Model.patente" id="patente" style="width: 50%">
+				</div>
+				<label for="example-text-input" class="col-2 col-form-label">Descripción</label>
+				<div class="col-10">
+					<input class="form-control m-input" type="text" value="@Model.descripcion" id="descripcion" style="width: 50%">
+				</div>
 				<label for="example-text-input" class="col-2 col-form-label">Empresa de Transporte</label>
 				<div class="col-10">
 					<input class="form-control m-input" type="text" value="@Model.empresatransporte" id="empresatransporte" style="width: 50%">
 				</div>
+
 			</div>
 
 
