--- a/3 - Proyecto/Despacho/WebApp/Views/Camion/Camion.cshtml
+++ b/3 - Proyecto/Despacho/WebApp/Views/Camion/Camion.cshtml
@@ -40,7 +40,7 @@
 				</div>
 				<label for="example-text-input" class="col-2 col-form-label">Empresa de Transporte</label>
 				<div class="col-10">
-					<input class="form-control m-input" type="text" value="@Model.empresatransporte" id="empresatransporte" style="width: 50%">
+					<input class="form-control m-input" type="text" value="@Model.empresatransporteid" id="empresatransporteid" style="width: 50%">
 				</div>
 
 			</div>
