--- a/3 - Proyecto/Despacho/WebApp/Views/Usuario/index.cshtml
+++ b/3 - Proyecto/Despacho/WebApp/Views/Usuario/index.cshtml
@@ -26,7 +26,7 @@
 					<div class="form-group m-form__group row align-items-center">
 						<div class="col-md-4">
 							<div class="m-input-icon m-input-icon--left">
-								<input type="text" class="form-control m-input m-input--solid" placeholder="Buscar..." id="buscarUsuario">
+								<input type="text" class="form-control m-input m-input--solid" placeholder="Buscar..." id="buscarusuario">
 								<span class="m-input-icon__icon m-input-icon__icon--left">
 									<span><i class="la la-search"></i></span>
 								</span>
@@ -47,7 +47,7 @@
 		</div>
 		<!--end: Search Form -->
 		<!--begin: Datatable -->
-		<div class="m_datatable" id="listaUsuarios"></div>
+		<div class="m_datatable" id="listausuarios"></div>
 		<!--end: Datatable -->
 	</div>
 </div>
