--- a/3 - Proyecto/Despacho/WebApp/Views/TipoDocumento/TipoDocumento.cshtml
+++ b/3 - Proyecto/Despacho/WebApp/Views/TipoDocumento/TipoDocumento.cshtml
@@ -44,7 +44,7 @@
 					</div>
 					<div class="col-10">
 						<button type="button" class="btn btn-success" id="btnGuardar">Guardar</button>
-						<a href="/Cliente/Index" class="btn btn-secondary">Volver</a>
+						<a href="/TipoDocumento/Index" class="btn btn-secondary">Volver</a>
 					</div>
 				</div>
 			</div>
