--- a/3 - Proyecto/Despacho/WebApp/Views/UnidadNegocio/UnidadNegocio.cshtml
+++ b/3 - Proyecto/Despacho/WebApp/Views/UnidadNegocio/UnidadNegocio.cshtml
@@ -48,7 +48,7 @@
 					</div>
 					<div class="col-10">
 						<button type="button" class="btn btn-success" id="btnGuardar">Guardar</button>
-						<a href="/Cliente/Index" class="btn btn-secondary">Volver</a>
+						<a href="/UnidadNegocio/Index" class="btn btn-secondary">Volver</a>
 					</div>
 				</div>
 			</div>
